Fixed footer height on mobile

--- a/main.css
+++ b/main.css
@@ -283,8 +283,21 @@ table {
     #email {
         width: 100px;
     }
+    #github:hover {
+        width: 130px;
+    }
+    #linkedin:hover {
+        width: 300px;
+        height: 260px;
+    }
+    #email:hover {
+        width: 110px;
+    }
     .footer-item {
-        margin: 20% 0;
+        margin: 24% 0;
+    }
+    footer {
+        height: 300px;
     }
 }
 /* For Tablets */
@@ -305,18 +318,26 @@ table {
         font-size: 13px;
     }
     #github {
-        width: 100px;
+        width: 90px;
     }
     #linkedin {
-        width: 300px;
+        width: 290px;
     }
     #email {
         width: 80px;
     }
+    #github:hover {
+        width: 100px;
+    }
+    #linkedin:hover {
+        width: 300px;
+    }
+    #email:hover {
+        width: 90px;
+    }
     .footer-item {
         margin: 20% 0;
     }
-    
 }
 
 /* END RESPONSIVE*/
